--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY html /usr/share/nginx/html
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/html /usr/share/nginx/html
 EXPOSE 80
