--- a/k8s/nginx_deployment.yaml
+++ b/k8s/nginx_deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: nginx
           image: jayaprathap96/nginx-custom:latest
           ports:
-            - containerPort: 80
+            - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -28,6 +28,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-      nodePoer: 30008
+      targetPort: 8081
+      nodePort: 30011
   type: NodePort
